# RAGBot

./: OpenAIAPI.py  Prompts.py  README.md  SearchStrategy.py  TechnicalDocumentation.py  TextChunker.py  TextSearcher.py  app.py  main.py  pyproject.toml  streamlit_app.py
ragbot/: AgentLog.py  AgentWrapper.py  TechnicalDocumentation.py  app.py  main.py  pyproject.toml  requirements.txt
ragbot/src/: AgentWrapper.py  SearchStrategy.py
ragboto/: ChunkingStrategy.py  EvaluationCheck.py  README.md  SearchStrategy.py  TechnicalDocumentation.py  TextChunker.py  pyproject.toml
src/: AgentLog.py  AgentWrapper.py  OpenAIAPI.py  Prompts.py  SearchStrategy.py  TechnicalDocumentation.py  TextChunker.py  TextSearcher.py
