[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragbot"
version = "0.1.0"
description = "An interactive RAG system agent that allows to search through any repository documentation and get answers in natural language"
readme = "README.md"
requires-python = ">=3.13.6"
dependencies = [
    "streamlit==1.50.0",
    "sentence-transformers==5.1.1",
    "openai==2.0.0",
    "python-dotenv==1.1.1",
    "pydantic-ai==1.10.14",
    "pydantic>=2.11.9",
    "minsearch==0.0.5",
    "requests==2.32.5",
    "numpy>=2.3.3",
    "python-frontmatter==1.1.0",
    "tqdm==4.67.1"
]
