[tool.poetry]
name = "ragbotus"
version = "0.1.0"
description = "An interactive RAG system agent that allows to search through any repository documentation and get answers in natural language"
authors = ["mvrey <marcos.vazquez.rey@gmail.com>"]
packages = [{include = "ragboto"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"